# orthogonal

./: .gitignore  .mypi.ini  .travis.yml  README.md  TSM.py  TestGML.py  cleanup.sh  installdeps.sh  packageme.sh  pyproject.toml  requirements.txt  runtests.sh  setup.py  test-original.py  testLoggingConfig.json
.circleci/: config.yml
.github/workflows/: python-publish.yml
orthogonal/dcel/: DCEL.py  Hedge.py  Vertex.py
orthogonal/doublyConnectedEdgeList/: Face.py
orthogonal/mapping/: EmbeddedTypes.py  EmbeddingToScreen.py  LayoutGrid.py
orthogonal/topologyShapeMetric/: Compaction.py  EmbeddedCoordinates.py  EmbeddingToScreen.py  FlowNet.py  Orthogonalization.py  Planarization.py  TSM.py
scripts/: cleanup.sh  installdeps.sh  packageme.sh  pushtoprod.sh  pushtotest.sh  runtests.sh
tests/: ProjectTestBase.py  TestEmbeddingToScreen.py  TestGML.py  TestLayoutGrid.py  TestSetOfPositions.py  test-original.py
tests/resources/: testLoggingConfiguration.json
tests/testdata/: testLoggingConfig.json  translationGraphComplex.gml  translationGraphMedium.gml  translationGraphSimple.gml
